<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blacklist</string>

    <!-- fragments -->
    <string name="lbl_settings">Settings</string>
    <string name="lbl_add">Add new number</string>
    <string name="lbl_about">About</string>
    <string name="lbl_edit">Edit number</string>
    <string name="lbl_history">History</string>

    <!-- controls -->
    <string name="btn_add">Add into Blacklist</string>
    <string name="btn_remove">Remove from Blacklist</string>
    <string name="et_phone">Please input a phone number</string>
    <string name="chk_enable">Enable Blacklist Service</string>
    <string name="tgl_blacklist_enabled">Blacklist service enabled</string>
    <string name="tgl_blacklist_disabled">Blacklist service disabled</string>

    <!-- Home Menu -->
    <string name="menuitem_add">Add a new number</string>
    <string name="menuitem_more">More</string>

    <!-- Spinner of blocking options -->
    <string name="block_option_prompt">Choose a block options</string>
    <string-array name="block_option_arrays">
        <item>Block calls and SMS</item>
        <item>Block only calls</item>
        <item>Block only SMS</item>
    </string-array>

    <!-- HistoryFragment -->
    <string name="sms_dialog_title">SMS</string>
    <string name="sms_dialog_button">Close</string>
    <string name="menu_clear_history">Clear</string>

    <!-- About content -->
    <string name="about_content">
        <![CDATA[
        <h2>Blacklist 0.3</h2>
        Build on 11 May, 2013 <br/>
        Thank you very much for using Blacklist.
        This is a very simple app for blocking unwanted incoming calls and SMS.
        Any issue or feature request please send an email.<br/>
        Email: <a href="mailto:adriftrock@gmail.com">adriftrock@gmail.com</a> <br/><br/>

        <h3>Change Log</h3>

        ## Version 0.3 (2013-5-11)                    <br/>
        - Viewing intercepted history                 <br/>
        - Fixing bugs.                                <br/><br/>
        ## Version 0.2 (2013-4-4)                     <br/>
        - Using action bar design pattern             <br/>
        - Blocking unwanted SMS.                      <br/>
        - Option for blocking calls, SMS or both.     <br/>
        - New screen for adding/edting number.        <br/>
        - Fixing bugs.                                <br/><br/>
        ## Version 0.1 (2013-2-26)                    <br/>
        - Browsing and checking blocked numbers.      <br/>
        - Warning if turn off the Blacklist service.  <br/>
        - Fixing bugs.                                <br/><br/>
        ## Version 0.1-preview (2012-11-26)           <br/>
        - Initial publishing.                         <br/>
        - Block unwanted incoming calls.              <br/>
        ]]>
    </string>
</resources>
