<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

        <CheckBox android:id="@+id/chkEnableBlacklist"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/chk_enable"/>

        <EditText android:id="@+id/etPhone" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:hint="@string/et_phone"
                  android:numeric="integer" android:layout_marginTop="30dip"/>

        <Button android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add"/>

        <Button android:id="@+id/btnRemove"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_remove"/>

    </LinearLayout>